@@ -96,23 +96,23 @@ RandomValuesDialog::RandomValuesDialog(Spreadsheet* s, QWidget* parent)
 	// restore saved settings if available
 	create(); // ensure there's a window created
 	const KConfigGroup conf(KSharedConfig::openConfig(), "RandomValuesDialog");
-	if (conf.exists()) {
-		const int dist = conf.readEntry("Distribution", defaultDist);
-		ui.cbDistribution->setCurrentIndex(ui.cbDistribution->findData(dist));
-		if (ui.cbDistribution->currentIndex() == 0) // if index=0 no signal is emitted above, call this slot directly
-			this->distributionChanged();
-		const auto numberLocale = QLocale();
-		// read parameter or set values for default dist
-		ui.leParameter1->setText(numberLocale.toString(conf.readEntry("Parameter1", 0.0)));
-		ui.leParameter2->setText(numberLocale.toString(conf.readEntry("Parameter2", 1.0)));
-		ui.leParameter3->setText(numberLocale.toString(conf.readEntry("Parameter3", 1.0)));
-		ui.leSeed->setText(conf.readEntry("Seed", QString()));
 
+	const int dist = conf.readEntry("Distribution", defaultDist);
+	ui.cbDistribution->setCurrentIndex(ui.cbDistribution->findData(dist));
+	if (ui.cbDistribution->currentIndex() == 0) // if index=0 no signal is emitted above, call this slot directly
+		this->distributionChanged();
+	const auto numberLocale = QLocale();
+	// read parameter or set values for default dist
+	ui.leParameter1->setText(numberLocale.toString(conf.readEntry("Parameter1", 0.0)));
+	ui.leParameter2->setText(numberLocale.toString(conf.readEntry("Parameter2", 1.0)));
+	ui.leParameter3->setText(numberLocale.toString(conf.readEntry("Parameter3", 1.0)));
+	ui.leSeed->setText(conf.readEntry("Seed", QString()));
+
+	if (conf.exists()) {
 		KWindowConfig::restoreWindowSize(windowHandle(), conf);
 		resize(windowHandle()->size()); // workaround for QTBUG-40584
 	} else {
 		ui.cbDistribution->setCurrentIndex(ui.cbDistribution->findData(defaultDist));
-
 		resize(QSize(400, 0).expandedTo(minimumSize()));
 	}
 }
